# websearch-agent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
src/: __init__.py
src/agent/: __init__.py  prompts.py  search_agent.py
src/config/: __init__.py  settings.py
src/excel/: __init__.py  reader.py  writer.py
src/models/: __init__.py  software.py
src/sharepoint/: __init__.py  client.py
